--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "watch": "tsc -w",
     "cdk": "cdk"
   },
- "devDependencies": {
+  "devDependencies": {
     "@types/aws-lambda": "^8.10.145",
     "@types/node": "22.7.4",
     "aws-cdk": "2.156.0",
@@ -18,10 +18,11 @@
     "typescript": "~5.6.2"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.658.1",
-    "@aws-sdk/lib-dynamodb": "^3.658.1",
+    "@aws-sdk/client-dynamodb": "^3.662.0",
+    "@aws-sdk/lib-dynamodb": "^3.662.0",
     "@aws-sdk/util-dynamodb": "^3.658.1",
     "aws-cdk-lib": "2.156.0",
+    "aws-sdk": "^2.1691.0",
     "constructs": "^10.3.0",
     "source-map-support": "^0.5.21"
   }
